--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "dependencies": {
     "@google-cloud/storage": "^7.17.2",
     "@radix-ui/react-dialog": "^1.1.15",
+    "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "resend": "^6.4.2",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1"
   },
