sanity studio init

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "next build",
+    "build:turbopack": "next build --turbopack",
     "start": "next start"
   },
   "dependencies": {
@@ -18,17 +19,22 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@react-email/components": "^0.5.7",
     "@react-email/render": "^1.4.0",
+    "@sanity/image-url": "^1.2.0",
+    "@sanity/vision": "^4.15.0",
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-sanity": "^11.6.7",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.66.0",
     "resend": "^6.4.2",
+    "sanity": "^4.15.0",
+    "styled-components": "^6.1.19",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.12"
