--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
+    "masonic": "^4.1.0",
     "next": "15.5.4",
     "next-sanity": "^11.6.7",
     "react": "19.1.0",
